--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <style>
+      .mrlf20px{margin-left:20px;}
+    </style>
   </head>
   <body>
     <section class="page-header">
       <h1 class="project-name">Incarhu.GitHub.io</h1>
-      <h2 class="project-tagline">ylhu的博客</h2>
+      <h2 class="project-tagline">胡亚龙的博客</h2>
     </section>
 
     <section class="main-content">
@@ -29,19 +32,22 @@
       <p>首先，JavaScript 语言通过 Node 在服务器运行，在这个意义上，Node 有点像 JavaScript 虚拟机；</p>
       <p>其次，Node 提供大量工具库，使得 JavaScript 语言与操作系统互动（比如读写文件、新建子进程），在这个意义上， Node 又是 JavaScript 的工具库。</p>
       <h1>安装操作步骤---</h1>
-      <p>1.下载：[nvm-windows](https://github.com/coreybutler/nvm-windows/releases/download/1.1.0/nvm-noinstall.zip)</p>
+      <p>1.下载：[nvm-windows]<a href="https://github.com/coreybutler/nvm-windows/releases/download/1.1.0/nvm-noinstall.zip"></a></p>
       <p>2.编辑解压目录下的`settings.txt`文件（不存在则新建）</p>
-      <p>+ `root 配置为当前 nvm.exe 所在目录
-         + `path 配置为 node 快捷方式所在的目录
-         + `arch 配置为当前操作系统的位数（32/64）
-         + `proxy 不用配置
-      </p>
+      <div class="mrlf20px">
+        <p class="mrlf20px">+ `root 配置为当前 nvm.exe 所在目录</p>        
+        <p class="mrlf20px">+ `path 配置为 node 快捷方式所在的目录</p>
+        <p class="mrlf20px">+ `arch 配置为当前操作系统的位数（32/64）</p>
+        <p class="mrlf20px">+ `proxy 不用配置</p>
+      </div>
       <p>3.配置环境变量</p>
-      <p>+ `NVM_HOME = 当前 nvm.exe 所在目录</p>
-      <p>+ `NVM_SYMLINK = node 快捷方式所在的目录</p>
-      <p>+ `PATH += %NVM_HOME%;%NVM_SYMLINK%;</p>
-      <p>+ 打开CMD通过`set [name]`命令查看环境变量是否配置成功</p>
-      <p></p>
+      <div class="mrlf20px">
+        <p>+ `NVM_HOME = 当前 nvm.exe 所在目录</p>
+        <p>+ `NVM_SYMLINK = node 快捷方式所在的目录</p>
+        <p>+ `PATH += %NVM_HOME%;%NVM_SYMLINK%;</p>
+        <p>+ 打开CMD通过`set [name]`命令查看环境变量是否配置成功</p>
+      </div>
+      
     </section>
 
   </body>
