--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p>首先，JavaScript 语言通过 Node 在服务器运行，在这个意义上，Node 有点像 JavaScript 虚拟机；</p>
       <p>其次，Node 提供大量工具库，使得 JavaScript 语言与操作系统互动（比如读写文件、新建子进程），在这个意义上， Node 又是 JavaScript 的工具库。</p>
       <h1>安装操作步骤---</h1>
-      <p>1.下载：[nvm-windows]<a href="www.baidu.com"></a>https://github.com/coreybutler/nvm-windows/releases/download/1.1.0/nvm-noinstall.zip</p>
+      <p>1.下载：[nvm-windows](https://github.com/coreybutler/nvm-windows/releases/download/1.1.0/nvm-noinstall.zip)</p>
       <p>2.编辑解压目录下的`settings.txt`文件（不存在则新建）</p>
       <div class="mrlf20px">
         <p class="mrlf20px">+ `root 配置为当前 nvm.exe 所在目录</p>        
