移动混合APP打包

--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
         <p>CLASSPATH:`.;%JAVA_HOME%\lib\dt.jar;%JAVA_HOME%\lib\tools.jar;`</p>
         <p>Path:`;%ANDROID_HOME%\tools;%ANDROID_HOME%\platform-tools;`</p>   
       </div>
-      
+      <h1>移动混合APP打包</h1>
+      <div class="mrlf20px">
+        <p>为项目添加一个平台：<i>ionic platform add android</i></p>
+        <p>在模拟机上运行：<i>ionic emulate android</i></p>
+        <p>打包成安卓：<i>ionic build android</i></p>
+      </div>
     </section>
 
   </body>
