--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
         <p>在模拟机上运行：<i>ionic emulate android</i></p>
         <p>打包成安卓：<i>ionic build android</i></p>
       </div>
+      <h1>GitHub上传</h1>
+      <div class="mrlf20px">
+        <p>先提交项目：<i>git commit -m "first commit"</i></p>
+        <p>添加到远程分支：<i>git remote add origin https://github.com/incarhu/aaa.git</i></p>
+        <p>推上去：<i>git push -u origin master</i></p>
+      </div>
     </section>
 
   </body>
