--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="main-content">
 
       <footer class="site-footer">
-        <p class="site-footer-credits">“路漫漫其修远兮，吾将上下而求索”这是我最喜欢名句，出自屈原的名作《离骚》。意思是说：在追寻真理（真知）方面，前方的道路还很漫长，但我将百折不挠，不遗余力地（上天下地）去追求和探索。在web前端这条道路上，它激励着我不断的学习，不断的成长。</p>
+        <p class="site-footer-credits">“路漫漫其修远兮，吾将上下而求索”这是我最喜欢名句，出自屈原的名作《离骚》。意思是说：在追寻真理（真知）方面，前方的道路还很漫长，但我将百折不挠，不遗余力地（上天下地）去追求和探索。</p>
       </footer>
 
     </section>
