--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
         <p>添加到远程分支：<i>git remote add origin https://github.com/incarhu/aaa.git</i></p>
         <p>推上去：<i>git push -u origin master</i></p>
       </div>
+      <h1>MYSQL</h1>
+       <div class="mrlf20px">
+         <p>1.连接数据库：<span>cd到当前目录，，mysql -h localhost -u 用户名 -p 密码 </span></p>
+         <p>2.显示数据库：<span>show databases</span></p>
+       </div>  
     </section>
 
   </body>
