--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
        <div class="mrlf20px">
          <p>1.连接数据库：<span>cd到当前目录，，mysql -h localhost -u 用户名 -p 密码 </span></p>
          <p>2.显示数据库：<span>show databases</span></p>
+         <p>3.创建一个数据库：<span>create database test</span></p>
+         <p>4.使用库：<span>use test</span></p>
+         <p>4.创建表：<span>create table msg</span></p>
+         <p>6.查看库下面的表：<span>show tables</span></p>
+         <p>7.查看表结构：<span>desc msg;</span></p>
        </div>  
     </section>
 
