--- a/index.html
+++ b/index.html
@@ -55,8 +55,19 @@
          <p>4.创建表：<span>create table msg</span></p>
          <p>6.查看库下面的表：<span>show tables</span></p>
          <p>7.查看表结构：<span>desc msg;</span></p>
-       </div>  
+       </div>
+       <h1>Mongodb</h1>
+       <div class="mrlf20px">
+         <p>1、运行数据库,开机：<span>--首先在一个cmd里输入 mongod --dbpath c:\data\db ，然后另开一个cmd键入 mongo</span></p>
+         <p>2、列出所有数据库：<span>--show dbs</span></p>
+         <p>3、使用某个数据库：<span>--use 数据库名字，如果新建数据库，也是use。use一个不存在的，就是创建</span></p>
+         <p>4、插入数据：<span>--db.student.insert({"name":"xiaoming","age":"20","sex":"nan"});</span></p>
+         <p>5、查看数据集合：<span>--db.student.find();</span></p>
+         <p>6、查看数据库的所有集合：<span>--show collections</span></p>
+         <p>7、导入外部集合json：<span>mongoimport --db demo --collection student --drop --file C:\Users\1.json</span></p>
+         <p>8、查找数据，用find：<span>----db.student.find({"score.math":70},);</span></p>
+         <p><span></span></p>
+       </div> 
     </section>
-
   </body>
 </html>
