--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
            <p>&nbsp;&nbsp;<span>--file C:\Users\1.json (需要导入哪个文件的路径)</span></p>
          </div>        
          <p>8、查找数据，用find：<span>----db.student.find({"score.math":70},);</span></p>
-         <p><span></span></p>
+         <p>9、删除，用drop：<span>--db.student.drop()</span></p>
+         <p>10、更改，用update：<span>--db.student.update({"name":"小明"},{$set:{"name":16}});</span></p>
        </div> 
     </section>
   </body>
