--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       </div>
       <h1>GitHub上传</h1>
       <div class="mrlf20px">
+        <p>先新增所有修改文件到本地：<i>git add .</i></p>
         <p>先提交项目：<i>git commit -m "first commit"</i></p>
         <p>添加到远程分支：<i>git remote add origin https://github.com/incarhu/aaa.git</i></p>
         <p>推上去：<i>git push -u origin master</i></p>
